G4Parser.py
# Generated from G4.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class G4Parser ( Parser ):

    grammarFileName = "G4.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUM", "WS" ]

    RULE_prog = 0
    RULE_suma = 1
    RULE_resta = 2
    RULE_mult = 3
    RULE_div = 4
    RULE_factor = 5

    ruleNames =  [ "prog", "suma", "resta", "mult", "div", "factor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    NUM=7
    WS=8

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def suma(self):
            return self.getTypedRuleContext(G4Parser.SumaContext,0)


        def EOF(self):
            return self.getToken(G4Parser.EOF, 0)

        def getRuleIndex(self):
            return G4Parser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = G4Parser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.suma(0)
            self.state = 13
            self.match(G4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SumaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return G4Parser.RULE_suma

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class G4PasaRestaContext(SumaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G4Parser.SumaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def resta(self):
            return self.getTypedRuleContext(G4Parser.RestaContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitG4PasaResta" ):
                return visitor.visitG4PasaResta(self)
            else:
                return visitor.visitChildren(self)


    class G4SumaContext(SumaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G4Parser.SumaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def suma(self):
            return self.getTypedRuleContext(G4Parser.SumaContext,0)

        def resta(self):
            return self.getTypedRuleContext(G4Parser.RestaContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitG4Suma" ):
                return visitor.visitG4Suma(self)
            else:
                return visitor.visitChildren(self)



    def suma(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = G4Parser.SumaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_suma, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = G4Parser.G4PasaRestaContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 16
            self.resta(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 23
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = G4Parser.G4SumaContext(self, G4Parser.SumaContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_suma)
                    self.state = 18
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 19
                    self.match(G4Parser.T__0)
                    self.state = 20
                    self.resta(0) 
                self.state = 25
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class RestaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return G4Parser.RULE_resta

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class G4PasaMultContext(RestaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G4Parser.RestaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def mult(self):
            return self.getTypedRuleContext(G4Parser.MultContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitG4PasaMult" ):
                return visitor.visitG4PasaMult(self)
            else:
                return visitor.visitChildren(self)


    class G4RestaContext(RestaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G4Parser.RestaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def resta(self):
            return self.getTypedRuleContext(G4Parser.RestaContext,0)

        def mult(self):
            return self.getTypedRuleContext(G4Parser.MultContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitG4Resta" ):
                return visitor.visitG4Resta(self)
            else:
                return visitor.visitChildren(self)



    def resta(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = G4Parser.RestaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_resta, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = G4Parser.G4PasaMultContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 27
            self.mult(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 34
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = G4Parser.G4RestaContext(self, G4Parser.RestaContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_resta)
                    self.state = 29
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 30
                    self.match(G4Parser.T__1)
                    self.state = 31
                    self.mult(0) 
                self.state = 36
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class MultContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return G4Parser.RULE_mult

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class G4MultContext(MultContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G4Parser.MultContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def mult(self):
            return self.getTypedRuleContext(G4Parser.MultContext,0)

        def div(self):
            return self.getTypedRuleContext(G4Parser.DivContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitG4Mult" ):
                return visitor.visitG4Mult(self)
            else:
                return visitor.visitChildren(self)


    class G4PasaDivContext(MultContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G4Parser.MultContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def div(self):
            return self.getTypedRuleContext(G4Parser.DivContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitG4PasaDiv" ):
                return visitor.visitG4PasaDiv(self)
            else:
                return visitor.visitChildren(self)



    def mult(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = G4Parser.MultContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_mult, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = G4Parser.G4PasaDivContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 38
            self.div(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 45
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = G4Parser.G4MultContext(self, G4Parser.MultContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_mult)
                    self.state = 40
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 41
                    self.match(G4Parser.T__2)
                    self.state = 42
                    self.div(0) 
                self.state = 47
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class DivContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return G4Parser.RULE_div

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class G4DivContext(DivContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G4Parser.DivContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def div(self):
            return self.getTypedRuleContext(G4Parser.DivContext,0)

        def factor(self):
            return self.getTypedRuleContext(G4Parser.FactorContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitG4Div" ):
                return visitor.visitG4Div(self)
            else:
                return visitor.visitChildren(self)


    class G4PasaFactorContext(DivContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G4Parser.DivContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def factor(self):
            return self.getTypedRuleContext(G4Parser.FactorContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitG4PasaFactor" ):
                return visitor.visitG4PasaFactor(self)
            else:
                return visitor.visitChildren(self)



    def div(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = G4Parser.DivContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_div, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = G4Parser.G4PasaFactorContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 49
            self.factor()
            self._ctx.stop = self._input.LT(-1)
            self.state = 56
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = G4Parser.G4DivContext(self, G4Parser.DivContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_div)
                    self.state = 51
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 52
                    self.match(G4Parser.T__3)
                    self.state = 53
                    self.factor() 
                self.state = 58
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return G4Parser.RULE_factor

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class G4ParenContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G4Parser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def suma(self):
            return self.getTypedRuleContext(G4Parser.SumaContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitG4Paren" ):
                return visitor.visitG4Paren(self)
            else:
                return visitor.visitChildren(self)


    class G4NumContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a G4Parser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(G4Parser.NUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitG4Num" ):
                return visitor.visitG4Num(self)
            else:
                return visitor.visitChildren(self)



    def factor(self):

        localctx = G4Parser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_factor)
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                localctx = G4Parser.G4ParenContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.match(G4Parser.T__4)
                self.state = 60
                self.suma(0)
                self.state = 61
                self.match(G4Parser.T__5)
                pass
            elif token in [7]:
                localctx = G4Parser.G4NumContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.match(G4Parser.NUM)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.suma_sempred
        self._predicates[2] = self.resta_sempred
        self._predicates[3] = self.mult_sempred
        self._predicates[4] = self.div_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def suma_sempred(self, localctx:SumaContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         

    def resta_sempred(self, localctx:RestaContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         

    def mult_sempred(self, localctx:MultContext, predIndex:int):
            if predIndex == 2:
                return self.precpred(self._ctx, 2)
         

    def div_sempred(self, localctx:DivContext, predIndex:int):
            if predIndex == 3:
                return self.precpred(self._ctx, 2)
         




